# iot-openthread

./: .dockerignore  .gitignore  docker-compose.yml  install-docker.sh
coap_server/: Dockerfile  coap_server.py  mqtt_client.py  periodical_mqtt_client.py  requirements.txt
coap_server/archive/new/: pyproject.toml  setup.cfg
coap_server/archive/new/src/: __init__.py  config.py  mqtt_handler.py  resources.py  server.py
coap_server/archive/new/tests/: conftest.py  test_mqtt_handler.py  test_resources.py  test_server.py
coap_server/archive/src/: periodical_mqtt_client.py
coap_server/archive/tests/: test_coap_server.py
grafana/provisioning/dashboards/: demo-dashboard.json
grafana/provisioning/datasources/: automatic.yml
h2_thread_app/: coap_LED_client.py  coap_core_client.py  coap_server.py  sdkconfig  sdkconfig.defaults
h2_thread_app/main/: esp_ot_cli.cpp
mosquitto/config/: mosquitto.conf
telegraf/config/: telegraf.conf
test_coap-server/: test_coap-server.py
