[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = [".", "src"]
asyncio_mode = "strict"
testpaths = ["tests"]
addopts = "--import-mode=append"

[tool.pytest-asyncio]
mode = "strict"
asyncio_default_fixture_loop_scope = "function"
